--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="">Главная</a>
+            <a href="">Контакты</a>
+            <a href="">Отзывы</a>
+        </nav>
+    </header>
 </body>
 </html>
