--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
             <a href="">Отзывы</a>
         </nav>
     </header>
-    
+    <section>
+        <div>
+            <img src="" alt="">
+        </div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </section>
 </body>
 </html>
